<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KonClothes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="compras">Purchases</string>
    <string name="carrito">Shopping Cart</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="access">Access</string>
    <string name="email">E-mail</string>
    <string name="rep_password">Repeat your password</string>
    <string name="create_accout">Create accout</string>
    <string name="return_login_pg">Return to Login</string>
    <string name="user_email">user@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="card_details_title">Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="insert_card_nmber">Insert your card number</string>
    <string name="card_name">Card Name</string>
    <string name="insert_card_name">Insert the name in your card</string>
    <string name="card_expiration_date">Expiration Date (Card)</string>
    <string name="insert_card_expiration_date">Insert your card expiration date</string>
    <string name="card_security_code">Security Code</string>
    <string name="insert_cvv">Insert your CVV</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="your_shopping_card">Your Shopping Card</string>
    <string name="buy_products">Buy the product(s)</string>
    <string name="cart_back_to_catalog">Back to the Catalog</string>
    <string name="women_shirts">Women Shirts</string>
    <string name="men_shirts">Men Shirts</string>
    <string name="men_pants">Men Pants</string>
    <string name="women_pants">Women Pants</string>
    <string name="women_dresses">Women Dresses</string>
    <string name="men_dresses">Men Dresses</string>
    <string name="skirts">Skirts</string>
    <string name="socks">Socks</string>
    <string name="scarves">Scarves</string>
    <string name="sign_off">Sign Off</string>
    <string name="purchases">Purchases</string>
    <string name="slide_text_1">You can find a great variety of jackets for men and women according to your tastes.</string>
    <string name="slide_text_2">You will find dresses to your tastes with a big variety of colors and styles.</string>
    <string name="slide_text_3">There are pants of all sizes, proposals and varieties.</string>
    <string name="slide_text_4">"You will find shirts for shirts for men and women in great variety!</string>
    <string name="purchase_det_title">Purchase Details</string>
    <string name="total_price_text">Total Price:</string>
    <string name="total_price">$28.800</string>
    <string name="pay_mode">Pay Mode:</string>
    <string name="backToShoppingCart">Back To Shopping Cart</string>
    <string name="ex_1_cloth_name">Red Nylon Shirt</string>
    <string name="ex_1_cloth_description">"Nylon T-shirt size L. \nHigh hardness. For men"</string>
    <string name="ex_1_price">$40.000</string>
    <string name="ex_2_cloth_name">Blue Jean brand Denim</string>
    <string name="ex_2_cloth_description">"Blue Jean of Denim Brand, M size,\nleather. For women"</string>
    <string name="ex_2_price">$65.000</string>
    <string name="ex_3_cloth_name">Adidas Socks</string>
    <string name="ex_3_cloth_description">"Socks brand Adidas, M size,\nof high quality. For men"</string>
    <string name="ex_3_price">$50.000</string>
    <string name="backToPurchaseDetails">Back to Purchase Details</string>
    <string name="purchasesMade">Purchases Made</string>
    <string name="showPurchases">Show Purchases</string>
    <string name="listOfCloPur">"List of Clothes\n   Purchased"</string>
    <string name="clothInCar">"Clothes in\n  the Cart"</string>
    <string name="showCloInCart">Show clothes in the Cart</string>
    <string name="createdAccount">Your account has been created!</string>
    <string name="loggedWithText">Logged with: </string>
    <string name="gmailText">Gmail</string>
    <string name="facebookText">Facebook</string>
    <string name="personalAccText">Personal Account</string>
    <string name="sessionClosed">Session Closed</string>
    <string name="purchaseMade">Purchase Made</string>
</resources>