<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categorias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/categories" />
        <item
            android:id="@+id/compras"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/compras" />
        <item
            android:id="@+id/carrito"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/carrito" />
        <item
            android:id="@+id/salir"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/exit" />
    </group>

</menu>
