<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/register"
                style="@style/BigTitleStyle.Style2"
                android:text="@string/register"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/email"
                style="@style/TextFields_EditTextStyle.EmailAddress"
                android:hint="@string/email"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/password1"
                style="@style/TextFields_EditTextStyle.Password"
                android:hint="@string/password"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/password2"
                style="@style/TextFields_EditTextStyle.Password"
                android:hint="@string/rep_password"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >


                <Button
                    android:id="@+id/btnAcceder"
                    style="@style/ButtonStyle.Style2.Class1"
                    android:text="@string/create_accout"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/btnRegresar"
                    style="@style/ButtonStyle.Style2.Class1"
                    android:text="@string/return_login_pg"
                    android:layout_weight="1"
                    />

            </LinearLayout>
        </LinearLayout>



    </ScrollView>

</LinearLayout>