<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PurchaseDetails">

    <TextView
        android:id="@+id/yourPurchaseDetails"
        style="@style/BigTitleStyle.Style2"
        android:text="@string/purchase_det_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/totalPriceTitle"
        style="@style/PurchasesDetailsTextView"
        android:layout_width="wrap_content"
        android:text="@string/total_price_text" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        style="@style/PurchasesDetailsTextView.PD"
        android:text="@string/total_price"
        />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/payMode"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        style="@style/PurchasesDetailsTextView"
        android:layout_gravity="center"
        android:text="@string/pay_mode" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/american_express"
            style="@style/PayModeImages"
            android:src="@drawable/americanexpress"
            />
        <ImageView
            android:id="@+id/master_card"
            style="@style/PayModeImages.Ex"
            android:src="@drawable/mastercard"
            />
        <ImageView
            android:id="@+id/pay_pal"
            style="@style/PayModeImages.Ex"
            android:src="@drawable/paypal"
            />
        <ImageView
            android:id="@+id/visa"
            style="@style/PayModeImages.Ex"
            android:src="@drawable/visa"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
</LinearLayout>



    </LinearLayout>




            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="false"
                android:layout_weight="1"
                android:id="@+id/lvPurchaseItems">
            </ListView>



    <Button
        android:id="@+id/btnVolverCarrito"
        style="@style/ButtonStyle.Style2.Class1"
        android:text="@string/backToShoppingCart"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        />



</LinearLayout>