<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/icono"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                app:srcCompat="@mipmap/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="#3F51B5"
                android:textSize="34sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/username"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:background="#11FF00"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/password"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:background="#11FF00"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp">


                <Button
                    android:id="@+id/btnRegistrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:gravity="center"
                    />

                <Button
                    android:id="@+id/btnAcceder"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/access"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>



    </ScrollView>

</LinearLayout>
